remove all office-ui-fabric-react references

--- a/apps/demo-spfx-app/src/webparts/demoPeoplePicker/components/DemoPeoplePicker.module.scss
+++ b/apps/demo-spfx-app/src/webparts/demoPeoplePicker/components/DemoPeoplePicker.module.scss
@@ -1,4 +1,4 @@
-@import "../../node_modules/office-ui-fabric-react/dist/sass/References.scss";
+@import "../../node_modules/@fluentui/react/dist/sass/References.scss";
 
 .demoPeoplePicker {
 	display: block;
